fix: spacing between mangas

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
   .custom-block {
     background: rgba(23, 23, 23, 0.3);
   }
+  .select-btn[data-state="active"] > * {
+    @apply btn-primary;
+  }
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
